--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express-session": "^1.14.2",
     "jsonwebtoken": "^7.1.9",
     "lodash": "^4.16.4",
+    "mongo": "^0.1.0",
+    "mongoose": "^4.7.4",
     "morgan": "1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
